--- a/src/main/resources/mail_templates/association.html
+++ b/src/main/resources/mail_templates/association.html
@@ -6,8 +6,7 @@
 <body>
 <div class="main" style="font-family: Helvetica, Arial, sans-serif;line-height: 18px;font-size: 14px;color: #353535;">
     <div class="head" style="background-color: #f5f5f5;padding: 30px 0 20px 60px;">
-        <p class="title" style="font-weight: 600;font-size: 38px;line-height: 38px; margin: 0;margin-bottom: 10px">You
-            have received a grade</p>
+        <p class="title" style="font-weight: 600;font-size: 38px;line-height: 38px; margin: 0;margin-bottom: 10px">Your enrollment has been updated</p>
     </div>
     <div class="middle" style="padding: 20px 0 40px 60px;max-width: 600px;">
         <p>Hi <strong>{{userName}}</strong>,</p>
